--- a/restaurant/src/styles/Cards.css
+++ b/restaurant/src/styles/Cards.css
@@ -16,5 +16,13 @@
 
     width: 250px;
     height: 250px;
-    border-style: dashed;
+    border-style: solid;
+    padding: 10px;
+}
+
+.news{
+
+    border-bottom: grey;
+    border-bottom-style: solid;
+    border-width: thin;
 }
