--- a/restaurant/src/styles/NavBan.css
+++ b/restaurant/src/styles/NavBan.css
@@ -1,3 +1,8 @@
-.NavBan {
-    
+.NavBan .logo {
+    width: 50px;
+}
+
+.NavBan .background {
+    height: 300px;
+    background-position: 45% 41%;
 }
