--- a/restaurant/src/styles/Cards.css
+++ b/restaurant/src/styles/Cards.css
@@ -3,22 +3,31 @@
     padding: 0;
     box-sizing: border-box;
     list-style: none;
+    font-family: Arial, Helvetica, sans-serif;
     
   }
 
+.landingFlex {
+    display: flex;
+    width: 75.6%;
+    margin: auto;
+}
 
 .cardsList{
     display: flex;
     justify-content: space-evenly;
+    width: 78.4%;
+    margin: auto;
+    margin-bottom: 2%;
 }
 
 .cardsContent{
-
-    width: 250px;
+    
+    width: 31%;
     height: 250px;
     border-style: solid;
     padding: 10px;
-    
+    border-width: 1px;
     background-color: rgb(235,235,235);
     border-color: rgb(179,179,179);
 
@@ -54,7 +63,7 @@
 }
 
 .story{
-    width: 50%;
+    width: 92.5%;
 }
 
 .storyPhoto{
