--- a/restaurant/src/styles/NavBan.css
+++ b/restaurant/src/styles/NavBan.css
@@ -3,16 +3,20 @@
 .logo {
     position: relative;
     top: -14px;
-    font-size: 30px;
+    font-size: 48px;
     font-family: Arial, Helvetica, sans-serif;
     
 }
 
+.NavBan {
+    margin-bottom: 2%;
+}
+
 .NavBan .background {
     position: relative;
-    left: 115px;
+    margin: auto;
     height: 270px;
-    width: 80%;
+    width: 75.7%;
     background-position: 45% 42%;
     
 }
@@ -20,12 +24,17 @@
 
 
 .NavBan .navigator {
-    margin: 20px;
+    width: 75.7%;
+    margin: auto;
     display: flex;
     justify-content: space-between;
     border-bottom: 1px;
     border-bottom-style: solid;
     border-bottom-color: #E8E8E8;
+    padding-bottom: 2%;
+    padding-top: 4%;
+    border-bottom: solid 1px;
+    margin-bottom: 2%;
 }
 
 .nav-icons svg{
